--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <title>ToDo w/MySql</title>
 </head>
 
-<!-- 
+<!-- Git Test
    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
    Nemo nihil illum temporibus vero quasi dolorum recusandae? 
    Voluptatem nostrum omnis facere et modi. 
